--- a/.hintrc
+++ b/.hintrc
@@ -7,5 +7,14 @@
     "not ie 11",
     "not ios_saf <= 18.5",
     "not safari <= 18.5"
-  ]
+  ],
+  
+  "hints": {
+    "axe/name-role-value": [
+      "default",
+      {
+        "link-name": "off"
+      }
+    ]
+  }
 }
